--- a/vcls-invoicing/views/sale_views.xml
+++ b/vcls-invoicing/views/sale_views.xml
@@ -49,15 +49,12 @@
                     <field name="invoicing_frequency" force_save="1"/>
                     <field name="communication_rate" force_save="1"/>
                 </xpath>
-                <!--
-                <xpath expr="//field[@name='pricelist_id']" position="attributes">
-                    <attribute name="attrs">{'readonly': [('financial_config_readonly', '!=', True)]}</attribute>
-                    <attribute name="force_save">1</attribute>
-                </xpath>-->
                 <xpath expr="//field[@name='fiscal_position_id']" position="after">
                     <!--<field name="invoice_template" attrs="{'readonly': [('financial_config_readonly', '!=', True)]}" force_save="1" options="{'no_create_edit': True,'no_open':True}"/>-->
                     <field name="invoice_template" force_save="1" options="{'no_create_edit': True,'no_open':True}"/>
                     <field name="merge_subtask"/>
+                    <field name="family_invoice_status"/>
+                    <field name="invoice_status"/>
                     <field name="activity_report_template" attrs="{'readonly': [('financial_config_readonly', '!=', True)]}" force_save="1" options="{'no_create_edit': True,'no_open':True}"/>
                 </xpath>
                 <xpath expr="//field[@name='pricelist_id']" position="attributes">
@@ -65,6 +62,18 @@
                 </xpath>
                 <xpath expr="//group[@name='sale_pay']" position="attributes">
                     <attribute name="invisible">1</attribute>
+                </xpath>
+
+                <xpath expr="(//button[@name='%(sale.action_view_sale_advance_payment_inv)d'])[1]" position="attributes">
+                    <attribute name="attrs">{'invisible': ['&amp;', ('invoice_status', '!=', 'to invoice'), ('family_invoice_status', '!=', 'to invoice')]}</attribute>
+                </xpath>
+
+                <xpath expr="(//button[@name='%(sale.action_view_sale_advance_payment_inv)d'])[2]" position="attributes">
+                    <attribute name="attrs">{'invisible':  ['|', ('invoice_status', '=', 'to invoice'), ('family_invoice_status', '=', 'to invoice')]}</attribute>
+                </xpath>
+                <xpath expr="//field[@name='scope_of_work']" position="before">
+                    <field name="family_invoice_status"/>
+                    <field name="invoice_status"/>
                 </xpath>
             </field>
     </record>
@@ -120,7 +129,7 @@
                 <separator/>
                 <filter string="My IA orders" name="ia_orders" domain="[('partner_id.invoice_admin_id','=', uid)]"/>
                 <separator/>
-                <filter string="To Be Invoiced" name="to_be_invoiced" domain="[('invoice_status','in', ['to invoice','upselling'])]"/>
+                <filter string="To Be Invoiced" name="to_be_invoiced" domain="['|', ('invoice_status','in', ['to invoice','upselling']), ('family_invoice_status','in', ['to invoice','upselling'])]"/>
                 <separator/>
                 <filter string="Parent Only" name="parent_only_so" domain="[('parent_id', '=', False)]"/>
                 <separator/>
