--- a/vcls-invoicing/views/invoice_views.xml
+++ b/vcls-invoicing/views/invoice_views.xml
@@ -178,6 +178,20 @@
             </field>
         </record>
 
+        <record id="view_account_invoice_filter_vcls" model="ir.ui.view">
+            <field name="name">view.account.invoice.filter.vcls</field>
+            <field name="model">account.invoice</field>
+            <field name="inherit_id" ref="account.view_account_invoice_filter"/>
+            <field name="arch" type="xml">
+            <xpath expr="//filter[@name='salesperson']" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </xpath>
+            <xpath expr="//filter[@name='salesperson']" position="after">
+                <filter name="user_id" string="IA" domain="[]" context="{'group_by':'user_id'}"/>
+            </xpath>
+            </field>
+        </record>
+
         <record id="account.action_invoice_out_refund" model="ir.actions.act_window">
             <field name="name">Credit Notes</field>
             <field name="res_model">account.invoice</field>
@@ -186,7 +200,7 @@
             <field eval="False" name="view_id"/>
             <field name="domain">[('type','=','out_refund')]</field>
             <field name="context">{'default_type': 'out_refund', 'type': 'out_refund', 'journal_type': 'sale'}</field>
-            <field name="search_view_id" ref="account.view_account_invoice_filter"/>
+            <field name="search_view_id" ref="view_account_invoice_filter_vcls"/>
             <field name="view_ids" eval="[(5, 0, 0),
                 (0, 0, {'view_mode': 'tree', 'view_id': ref('vcls-invoicing.ia_invoices_view_tree')}),
                 (0, 0, {'view_mode': 'form', 'view_id': ref('vcls-invoicing.view_invoice_form')}),
