--- a/vcls-crm/views/sale_order_views.xml
+++ b/vcls-crm/views/sale_order_views.xml
@@ -137,7 +137,8 @@
                             <button type="object"
                                     name="submit_multi_template"
                                     class="oe_stat_button"
-                                    string="Submit Template">
+                                    string="Submit Template"
+                                    invisible="0">
                             </button>
                             <!-- invisible="[ ('vcls_version','&lt;',0.2)]" -->
                         </group>
