--- a/vcls-suppliers/views/sup_contact_views.xml
+++ b/vcls-suppliers/views/sup_contact_views.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="vcls-contact.view_form_contact_all"/>
             <field name="groups_id" eval="[(4, ref('vcls_security.vcls_lc')), (4, ref('purchase.group_purchase_user'))]"/>
             <field name="arch" type="xml">
-                <xpath expr="//div[@name='button_box']" prosition="inside">
+                <xpath expr="//div[@name='button_box']" position="inside">
                     <button name="action_po" type="object" class="oe_stat_button" icon="fa-credit-card"
                             attrs="{'invisible' : [('supplier', '=', False)]}">
                         <field string="Purchase Order" name="purchase_order_count" widget="statinfo"/>
@@ -23,13 +23,16 @@
 
             <field name="arch" type="xml">
                 
+                <xpath expr="//field[@name='company_id']" position="replace">
+                </xpath>
+
                 <xpath expr="/form/sheet/notebook/page[4]" position="after">
                     <page name="suppliers" string="Supplier Info" attrs="{'invisible': [('see_supplier', '=', False)]}">
                         <field name="see_supplier" invisible="1"/>
                         <field name="freeze_legacy_code" invisible="1"/>
                         <group>
                             <group>
-                                <field name="company_id" options="{'no_create': 1, 'no_create_edit': 1}"/>
+                                <field name="company_id" string="VCLS Entity" options="{'no_create': 1, 'no_create_edit': 1}"/>
                                 <field name="property_product_pricelist" string="Trading Pricelist"/>
                                 <field name="project_supplier_type_id"/>
                                 <field name="expertise_area_ids" widget="many2many_tags"/>
